# ckanext-yukondesign

./: .gitignore  DEPLOYMENT.md  MANIFEST.in  README.md  babel.cfg  licenses-yukon.json  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/: __init__.py
ckanext/yukon_2025_design/: access-requests_schema.yaml  action.py  cli.py  data_schema.yaml  helpers.py  information_schema.yaml  pia-summaries_schema.yaml  plugin.py  tasks.py
ckanext/yukon_2025_design/assets/: script.js  webassets.yml
ckanext/yukon_2025_design/i18n/: ckanext-yukon_2025_design.pot
ckanext/yukon_2025_design/i18n/fr/LC_MESSAGES/: ckanext-yukon_2025_design.mo  ckanext-yukon_2025_design.po
ckanext/yukon_2025_design/public/css/: yukon.css
ckanext/yukon_2025_design/templates/: base.html  footer.html  header.html  page.html
ckanext/yukon_2025_design/templates/frontend/: components.html  header.html  home.html
ckanext/yukon_2025_design/templates/group/: index.html
ckanext/yukon_2025_design/templates/home/: index.html
ckanext/yukon_2025_design/templates/package/: activity_stream.html  base.html  edit_base.html  read.html  search.html
ckanext/yukon_2025_design/templates/package/snippets/: resource_item.html  resources.html
ckanext/yukon_2025_design/templates/scheming/display_snippets/: date.html  multiple_text_links.html
ckanext/yukon_2025_design/templates/scheming/form_snippets/: organization.html  topics_autocomplete.html
ckanext/yukon_2025_design/templates/scheming/package/snippets/: additional_info.html  package_form.html
ckanext/yukon_2025_design/templates/snippets/: add_dataset.html  add_dataset_dropdown.html  facet_list.html  home_breadcrumb_item.html  package_item.html  package_list.html  search_form.html  search_result_text.html
ckanext/yukon_2025_design/templates/user/: read_base.html
ckanext/yukon_2025_design/tests/: test_plugin.py
ckanext/yukondesign/: access-requests_schema.yaml  action.py  auth.py  cli.py  data_schema.yaml  helpers.py  information_schema.yaml  matomo_sync.py  matomo_traffic.py  pia-summaries_schema.yaml  plugin.py
ckanext/yukondesign/assets/: script.js  style.css  webassets.yml
ckanext/yukondesign/i18n/: ckanext-yukondesign.pot
ckanext/yukondesign/i18n/fr/LC_MESSAGES/: ckanext-yukondesign.mo  ckanext-yukondesign.po
ckanext/yukondesign/public/css/: yukon.css
ckanext/yukondesign/templates/: base.html  footer.html  header.html  page.html
ckanext/yukondesign/templates/frontend/: components.html  header.html
ckanext/yukondesign/templates/group/: index.html
ckanext/yukondesign/templates/group/snippets/: helper.html  info.html
ckanext/yukondesign/templates/home/: index.html
ckanext/yukondesign/templates/organization/snippets/: info.html
ckanext/yukondesign/templates/package/: base_form_page.html  edit_base.html  new.html  read.html  read_base.html  resource_read.html  search.html
ckanext/yukondesign/templates/package/snippets/: package_form.html  resource_item.html  resources_list.html  stages.html
ckanext/yukondesign/templates/scheming/display_snippets/: organization.html
ckanext/yukondesign/templates/scheming/form_snippets/: organization.html
ckanext/yukondesign/templates/scheming/package/: read.html
ckanext/yukondesign/templates/scheming/package/snippets/: additional_info.html
ckanext/yukondesign/templates/snippets/: add_dataset.html  add_dataset_dropdown.html  facet_list.html  home_breadcrumb_item.html  local_friendly_datetime.html  package_item.html  search_form.html  search_result_text.html  tag_list.html
ckanext/yukondesign/templates/user/: read.html
ckanext/yukondesign/tests/: test_plugin.py
scripts/: generate_random_matomo_traffic.py  import_open_yukon_datasets.py
