[project]
name = "ckanext-yukon-2025-design"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Datopian", email = "support@datopian.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/datopian/ckanext-yukon-2025-design"

[project.entry-points."ckan.plugins"]
yukon_2025_design = "ckanext.yukon_2025_design.plugin:Yukon2025DesignPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
