# This file should only contain setuptools related configuration to build the
# extension (i.e. arguments to setup() in setup.py). Add any other project
# information should go to pyproject.toml instead.
#
# TODO: migrate Babel options to pyproject.toml when it's better supported


[options]
packages = find:
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             yukon_2025_design = ckanext.yukon_2025_design.plugin:Yukon2025DesignPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/yukon_2025_design/i18n/ckanext-yukon_2025_design.pot
width = 80

[init_catalog]
domain = ckanext-yukon_2025_design
input_file = ckanext/yukon_2025_design/i18n/ckanext-yukon_2025_design.pot
output_dir = ckanext/yukon_2025_design/i18n

[update_catalog]
domain = ckanext-yukon_2025_design
input_file = ckanext/yukon_2025_design/i18n/ckanext-yukon_2025_design.pot
output_dir = ckanext/yukon_2025_design/i18n
previous = true

[compile_catalog]
domain = ckanext-yukon_2025_design
directory = ckanext/yukon_2025_design/i18n
statistics = true
