[metadata]
name = ckanext-yukondesign
version = 0.1
description = Yukon 2025 CKAN design extension
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/ytgov/ckanext-yukondesign
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    ckan
include_package_data = True
zip_safe = False

[options.entry_points]
ckan.plugins =
    yukondesign = ckanext.yukondesign.plugin:Yukon2025DesignPlugin

[babel.extractors]
ckan = ckan.lib.extract:extract_ckan

[babel.cfg]
[python: **.py]
[javascript: **.js]
[ckan: **/templates/**.html]

[options.extras_require]
testing =
    pytest
    pytest-cov

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/yukondesign/i18n/ckanext-yukondesign.pot
width = 80

[init_catalog]
domain = ckanext-yukondesign
input_file = ckanext/yukondesign/i18n/ckanext-yukondesign.pot
output_dir = ckanext/yukondesign/i18n

[update_catalog]
domain = ckanext-yukondesign
input_file = ckanext/yukondesign/i18n/ckanext-yukondesign.pot
output_dir = ckanext/yukondesign/i18n
previous = true

[compile_catalog]
domain = ckanext-yukondesign
directory = ckanext/yukondesign/i18n
statistics = true
